# newcurosr

./: .gitignore  ANALYSIS_GUIDE.md  DOWNLOAD_LINKS.md  FILTER_COLUMNS_README.md  Filter_Analysis.xlsx  README.md  TAKE_RATE_DATA_TEMPLATE.csv  add_filter_columns.py  analyze_take_rates.py  apl_trifurcated_funnel_dashboard.html  apl_trifurcated_funnel_query.sql  create_filter_analysis_excel.py  dashboard.py  dashboard_app.py  deploy_apl_funnel_gcs.sh  filter_columns_template.csv  filter_columns_template.xlsx  filter_template.csv  filter_template.xlsx  generate_sample_data.py  pyproject.toml  refresh_apl_funnel_hourly.sh  requirements.txt  run_apl_trifurcated_funnel.py  take-rate-improvement-ideas.md
.github/workflows/: pages.yml  refresh-dashboard-data.yml
apl_trifurcated_funnel/: sql_template.py
dashboard/: apl_trifurcated_funnel_dashboard.html  walkback_sms_test_control_dashboard.html
docs/: apl_trifurcated_funnel.sample.csv  index.html  walkback_sms_dashboard_spec.md  walkback_sms_visualization_analysis_playbook.md
docs/data/: latest.csv
scripts/: refresh_dashboard_data.py  run_apl_trifurcated_funnel.py
sql/: apl_trifurcated_funnel.sql  apl_trifurcated_funnel_dashboard_extract.sql  apl_trifurcated_funnel_extract.sql  pagaya_application_segmentation.sql  v_apl_walkback_sms_dashboard.sql  walkback_sms_visualization_analysis.sql
src/: run_apl_trifurcated_funnel.py
